--- a/css/supportStyle.css
+++ b/css/supportStyle.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Oswald:500");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Macondo+Swash+Caps&display=swap');
 
 * {
   margin: 0;
