--- a/css/guides-and-tips.css
+++ b/css/guides-and-tips.css
@@ -71,9 +71,10 @@ body {
   
 } 
 
-@media (max-width: 520px){
+@media only screen and (max-width: 600px) {
   .col{
     
     margin-left: 85px;
   }
 }
+
