--- a/css/guides-and-tips.css
+++ b/css/guides-and-tips.css
@@ -71,10 +71,11 @@ body {
   
 } 
 
-@media only screen and (max-width: 600px) {
+@media  (max-width: 600px) {
   .col{
     
-    margin-left: 85px;
+    margin-left: 13%;
   }
 }
+
 
